package behavioral.observer.ca1;

public interface IListener <T>{
  void listen(T t);
}
